fixed-visibility

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ header h1{
     border-radius: 10px;
     width: calc(25% - 10px);
     float: left;
+    box-shadow: 1px 2px #888;
    
 }
 
@@ -69,7 +70,7 @@ header h1{
     background-color: #fff;
 
 }
-#special .air-balloon{
+#special .card-image{
     background-image: url(../img/noun_air_balloon_3134741.png);
     background-size: contain;
     background-repeat: no-repeat;
@@ -85,37 +86,37 @@ header h1{
     background-color: #fff;
 }
 
-.card:hover .air-balloon{
+.card.air-balloon:hover .card-image{
     background-image: url(../img/noun_air_balloon_3134741.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
-.card:hover .bicycle{
+.card.bicycle:hover .card-image{
     background-image: url(../img/noun_Bicycle_3134821.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
-.card:hover .cruise-ship{
+.card.cruise-ship:hover .card-image{
     background-image: url(../img/noun_Cruise_Ship_3134824.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
-.card:hover .tractor{
+.card.tractor:hover .card-image{
     background-image: url(../img/noun_Tractor_3134797.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
-.card:hover .tram{
+.card.tram:hover .card-image{
     background-image: url(../img/noun_Tram_3134750.png);
     background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
 }
-.card:hover .submarine{
+.card.submarine:hover .card-image{
     background-image: url(../img/noun_Submarine_3134738.png);
     background-size: contain;
     background-repeat: no-repeat;
